--- a/dacr/manifest.json
+++ b/dacr/manifest.json
@@ -2,13 +2,13 @@
   "manifest_version": 2,
   "name": "DeviantArt CR Thingy",
   "description": "Does DeviantArt CR Things",
-  "version": "1.3",
+  "version": "1.3.1",
   "author": "bloodywing <Pierre Geier>",
 
   "permissions": [
     "contextMenus",
     "activeTab",
-    "tabs"
+    "*://*.deviantart.com/*"
   ],
   "background": {
     "scripts": [
